--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
                     <div class="hover-effect">
 
                         <div class="hover-content" >
-                            <a th:href="@{/CategoryImage(id=${category.id})}"><p th:text="${category.name}"></p></a>
+                            <a th:href="@{/categoryImage(id=${category.id})}"><p th:text="${category.name}"></p></a>
                             <!--                            <a th:href="@{/deleteCategory(id=${category.id})}"> delete category</a>-->
                         </div>
 
