--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
 
 <h3>Add Category:</h3>
 <form action="/addCategory" method="post" enctype="multipart/form-data">
-    <input type="text" name="name" placeholder="Please input Category name"/><br>
+    <input id="inp1" type="text" name="name" placeholder="Please input Category name"/><br>
     <input type="file" name="image"/><br>
     <input type="submit" value="add">
 </form>
