--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Highway - Free CSS Template</title>
+    <title>Highway Grid CSS Template</title>
     <!--
-
     Highway Template
-
     https://templatemo.com/tm-520-highway
-
     -->
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +27,7 @@
 
 <nav>
     <div class="logo">
-        <a href="index.html">High<em>way</em></a>
+        <a href="/">High<em>way</em></a>
     </div>
     <div class="menu-icon">
         <span></span>
@@ -38,25 +35,35 @@
 </nav>
 
 
-<div class="full-screen-portfolio" id="portfolio">
-    <div class="container-fluid">
-            <div class="col-md-4 col-sm-6">
-            <div class="portfolio-item" th:each="category:${categories}">
 
-                <div class="thumb">
-                    <div class="hover-effect">
+<div class="grid-portfolio" id="portfolio">
+    <div class="container">
+        <div class="row">
 
-                        <div class="hover-content" >
-                            <a th:href="@{/categoryImage(id=${category.id})}"><p th:text="${category.name}"></p></a>
-                            <!--                            <a th:href="@{/deleteCategory(id=${category.id})}"> delete category</a>-->
+            <!-- category loop -->
+            <div class="col-md-4 col-sm-6"th:each="category : ${categories}">
+                <div class="portfolio-item">
+                    <div class="thumb">
+                        <a th:href="@{/categoryImage(id=${category.id})}">
+                            <div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1 th:text="${category.name}"></h1>
+                                </div>
+                            </div>
+                        </a>
+                        <div class="image">
+                            <img th:src="@{/image(name=${category.picUrl})}" width="400px" height="250px">
                         </div>
-
-                    </div>
-                    <div class="image" >
-                        <img th:src="@{/image(name = ${category.picUrl})}">
                     </div>
                 </div>
+            </div>
 
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="load-more-button">
+                    <a href="#">Load More</a>
+                </div>
             </div>
         </div>
 
@@ -74,87 +81,6 @@
     </div>
 </footer>
 
-
-<!-- Modal button -->
-<div class="popup-icon">
-    <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
-</div>
-
-<!-- Modal -->
-<div id="modal" class="modal">
-    <!-- Modal Content -->
-    <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-            <h3 class="header-title">Say hello to <em>Highway</em></h3>
-            <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
-        </div>
-        <!-- Modal Body -->
-        <div class="modal-body">
-            <div class="col-md-6 col-md-offset-3">
-                <form id="contact" action="" method="post">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <fieldset>
-                                <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                                       required="">
-                            </fieldset>
-                        </div>
-                        <div class="col-md-12">
-                            <fieldset>
-                                <input name="email" type="email" class="form-control" id="email"
-                                       placeholder="Your email..." required="">
-                            </fieldset>
-                        </div>
-                        <div class="col-md-12">
-                            <fieldset>
-                                <textarea name="message" rows="6" class="form-control" id="message"
-                                          placeholder="Your message..." required=""></textarea>
-                            </fieldset>
-                        </div>
-                        <div class="col-md-12">
-                            <fieldset>
-                                <button type="submit" id="form-submit" class="btn">Send Message Now</button>
-                            </fieldset>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<section class="overlay-menu">
-    <div class="container">
-        <div class="row">
-            <div class="main-menu">
-                <ul>
-                    <li>
-                        <a href="index.html">Home - Full-width</a>
-                    </li>
-                    <li>
-                        <a href="masonry.html">Home - Masonry</a>
-                    </li>
-                    <li>
-                        <a href="grid.html">Home - Small-width</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog Entries</a>
-                    </li>
-                    <li>
-                        <a href="single-post.html">Single Post</a>
-                    </li>
-                </ul>
-                <p>We create awesome templates for you.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
@@ -162,7 +88,6 @@
 
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
-
 
 </body>
 </html>
