--- a/src/main/resources/static/css/templatemo-style.css
+++ b/src/main/resources/static/css/templatemo-style.css
@@ -234,7 +234,7 @@ nav {
 
 
 
-#picture-container  {
+#video-container  {
   position: relative;
   width: 100%;
   height: 100%;
@@ -242,8 +242,8 @@ nav {
   z-index: 1;
 }
 
-#picture-container video,
-.picture-overlay {
+#video-container video,
+.video-overlay {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -252,20 +252,20 @@ nav {
   min-height: 100%;
 }
 
-#picture-container .picture-overlay {
+#video-container .video-overlay {
   z-index: 9999;
   background: rgba(0,0,0,0.5);
   width: 100%;
 }
 
-#picture-container .picture-content {
+#video-container .video-content {
   z-index: 99999;
   position: absolute;
   height: 100%;
   width: 100%;
 }
 
-#picture-container .picture-content .inner {
+#video-container .video-content .inner {
   height: 100%;
   width: 100%;
   display: flex;
@@ -274,7 +274,7 @@ nav {
   flex-flow: column wrap;
 }
 
-#picture-container .picture-content .inner h1 {
+#video-container .video-content .inner h1 {
   font-size: 64px;
   text-transform: uppercase;
   color: #fff;
@@ -283,13 +283,13 @@ nav {
   text-align: center;
 }
 
-#picture-container .picture-content .inner em {
+#video-container .video-content .inner em {
   font-style: normal;
   font-weight: 200;
 }
 
 
-#picture-container .picture-content .inner p {
+#video-container .video-content .inner p {
   color: #fff;
   font-size: 22px;
   font-weight: 200;
@@ -298,12 +298,12 @@ nav {
   padding: 0px 30px;
 }
 
-#picture-container .picture-content .inner a {
+#video-container .video-content .inner a {
   color: #fff;
   text-decoration: underline;
 }
 
-#picture-container .picture-content .inner .scroll-icon {
+#video-container .video-content .inner .scroll-icon {
   margin-top: 45px;
 }
 
