--- a/src/main/resources/templates/imagePage.html
+++ b/src/main/resources/templates/imagePage.html
@@ -1,28 +1,93 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Highway Grid CSS Template</title>
+    <!--
+    Highway Template
+    https://templatemo.com/tm-520-highway
+    -->
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/fontAwesome.css">
+    <link rel="stylesheet" href="css/light-box.css">
+    <link rel="stylesheet" href="css/templatemo-style.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
+
 <body>
 
-<div th:each="image:${images}" th:width="50">
+<nav>
+    <div class="logo">
+        <a href="/">High<em>way</em></a>
+    </div>
+    <div class="menu-icon">
+        <span></span>
+    </div>
+</nav>
 
-    <div class="col-md-4 col-sm-6">
-        <div class="portfolio-item">
 
-            <div class="thumb">
-                <div class="hover-effect">
 
-                </div>
-                <div class="image" th:width="50">
-                    <img th:src="@{/image(name = ${image.picUrl})}">
+<div class="grid-portfolio" id="portfolio">
+    <div class="container">
+        <div class="row">
+
+            <!-- category loop -->
+            <div class="col-md-4 col-sm-6" th:each="image : ${images}">
+                <div class="portfolio-item">
+                    <div class="thumb">
+                            <div class="hover-effect">
+                                <div class="hover-content">
+                                    <a th:href="@{/image(name=${image.picUrl})}">
+                                    <h1 th:text="${image.name}"></h1>                        </a>
+
+                                </div>
+                            </div>
+                        <div class="image">
+                            <img th:src="@{/image(name=${image.picUrl})}" width="400px" height="250px">
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="load-more-button">
+                    <a href="#">Load More</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
+
+
+<footer>
+    <div class="container-fluid">
+        <div class="col-md-12">
+            <p>Copyright &copy; 2018 Company Name
+
+                | Designed by TemplateMo</p>
+        </div>
+    </div>
+</footer>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+<script src="js/vendor/bootstrap.min.js"></script>
+
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
