--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,19 @@
-#inp1{
-    width: 400px;
+.inp1{
+    width: 300px;
     height: 30px;
     padding: 0 20px;
-    border: 2px solid red;
+    border: 4px solid black;
+    margin-bottom: 25px;
+    font-size: 1em;
+    text-transform: uppercase;
 }
+body{
+    background-color: azure;
+}
+.inp2{
+    color: #c12e2a;
+    opacity: 1;
+
+}
+
+
